Fixed spacing issue between section 2 & 3

--- a/css files/landing.css
+++ b/css files/landing.css
@@ -893,7 +893,8 @@ footer {
         flex-direction: column;
         align-items: center;
         height: 90vh;
-        padding: 0 20px 20px 20px;
+        padding: 0 20px 0 20px;
+        margin-bottom: 20px;
     }
 
     .features-landing h2 {
@@ -943,9 +944,11 @@ footer {
         display: flex;
         flex-direction: column;
         gap: 20px;
+        justify-content: center;
+        align-items: center;
     }
 
-    .features-landing .features-cont div {
+    .features-landing .features-cont .features-div {
         width: 100%;
         height: 50%;
     }
@@ -1043,13 +1046,14 @@ footer {
     .features-landing .features-cont .features-box {
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 10px;
-        justify-content: center;
-        padding: 10px;
     }
 
     .features-landing .features-cont .features-box h3 {
         font-size: 18px;
+        text-align: center;
+        margin-top: 20px;
     }
 
     .features-landing .features-cont .features-box h3 span {
@@ -1057,7 +1061,8 @@ footer {
     }
 
     .features-landing .features-cont .features-box .features {
-        height: 90%;
+        height: 100%;
+        width: 100%;
         width: 95%;
         display: flex;
         margin-bottom: 40px;
@@ -1113,7 +1118,7 @@ footer {
     }
 
     .features-landing .features-cont .features-box .features .feature-dets .feature-words p:nth-child(2) {
-        font-size: 12px;
+        font-size: 10px;
     }
 
 
@@ -1345,7 +1350,6 @@ footer {
         max-width: 768px;
     }
 }
-    
 
 @media (max-width: 1024px) {
     .container {
